--- a/operadoreslogicosrelacionais/Atividade_OperadoresLogicosAritmeticosRelacionais.ipynb
+++ b/operadoreslogicosrelacionais/Atividade_OperadoresLogicosAritmeticosRelacionais.ipynb
@@ -283,7 +283,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 01 - Sua resposta aqui..."
+        "# EXERCÍCIO 01\n",
+        "nome = input(\"Digite seu nome:\")\n",
+        "print(\"Seja bem vindo(a)\",nome,\"!\")"
       ],
       "metadata": {
         "id": "lwH7VERpvKr7"
@@ -294,7 +296,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 02 - Sua resposta aqui..."
+        "# EXERCÍCIO 02 - Sua resposta aqui...\n",
+        "a = float(input(\"Digite o primeiro número:\"))\n",
+        "b = float(input(\"Digite o segundo número:\"))\n",
+        "soma = a + b\n",
+        "subtracao = a - b\n",
+        "multiplicacao = a * b\n",
+        "divisao = a / b\n",
+        "print('Resultados: \\nSoma:', soma,\n",
+        "      '\\nSubtração:', subtracao,'\\nMultiplicacao:', multiplicacao,\n",
+        "      '\\nDivisao:', divisao,)"
       ],
       "metadata": {
         "id": "cClYukBfucKc"
@@ -305,7 +316,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 03 - Sua resposta aqui..."
+        "from os import wait\n",
+        "# EXERCÍCIO 03 - Sua resposta aqui...\n",
+        "print(\"Vou descobrir sua idade apenas com você me dizendo seu nome e ano de nascimento!\")\n",
+        "import time\n",
+        "time.sleep(2)\n",
+        "nm = input(\"Digite o seu nome: \")\n",
+        "ano = float(input(\"Digite o ano em que você nasceu: \"))\n",
+        "anoatual = float(input(\"Digite o ano atual: \"))\n",
+        "print(\"Pensando..........\")\n",
+        "time.sleep(1.5)\n",
+        "idade = anoatual - ano\n",
+        "print(\"Já sei, você tem\",idade,\"anos\",nm,\"!\")"
       ],
       "metadata": {
         "id": "q9VWOSBlvTSk"
@@ -316,35 +338,113 @@
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 04 - Sua resposta aqui..."
+        "# EXERCÍCIO 04 - Sua resposta aqui...\n",
+        "\n",
+        "dindin = float(input(\"Quanto dinheiro você tem:\"))\n",
+        "gasosa = dindin // 5\n",
+        "print(\"Você consegue comprar:\",gasosa,\"litros de combústivel\")\n",
+        "kmqdaprarodar = 20 * gasosa\n",
+        "time.sleep(1.5)\n",
+        "print(\"Você consegue rodar em km com a gasolina atual:\",kmqdaprarodar,\"km\")"
       ],
       "metadata": {
-        "id": "qE53EPzkvUZE"
+        "id": "qE53EPzkvUZE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe48a765-ea74-413a-f2ec-5e66e9eddcd2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quanto dinheiro você tem:27\n",
+            "Você consegue comprar: 5.0 litros de combústivel\n",
+            "Você consegue rodar em km com a gasolina atual: 100.0 km\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 05 - Sua resposta aqui..."
+        "# EXERCÍCIO 05 - Sua resposta aqui...\n",
+        "\n",
+        "v1 = 15\n",
+        "v2 = 10\n",
+        "v3 = 5\n",
+        "v4 = 0\n",
+        "print(\"RESULTADOS ==>\")\n",
+        "print()\n",
+        "print(\"A)\",v1 == 10) and (v2 == 10)\n",
+        "print()\n",
+        "print(\"B)\",(v1 == 15) and (v2 == 10))\n",
+        "print()\n",
+        "print(\"C)\",(v4 == 1) or (v3 == 4))\n",
+        "print()\n",
+        "print(\"D)\",(v1 > 10 and v2 < 15) and (v3 < 10 and v4 == 0))\n",
+        "print()\n",
+        "print(\"E)\",(v1 < 10 and v2 > 15) or (v3 > 5 or v4 == 0))"
       ],
       "metadata": {
-        "id": "A1On3LZBvVZS"
+        "id": "A1On3LZBvVZS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60dc4990-8f00-4069-87fd-108495db8a1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RESULTADOS ==>\n",
+            "\n",
+            "A) False\n",
+            "\n",
+            "B) True\n",
+            "\n",
+            "C) False\n",
+            "\n",
+            "D) True\n",
+            "\n",
+            "E) True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 06 - Sua resposta aqui..."
+        "# EXERCÍCIO 06 - Sua resposta aqui...\n",
+        "dias = int(input(\"Digite a quantidade de dias: \"))\n",
+        "resto = dias % 360\n",
+        "anos = dias // 360\n",
+        "dia = resto % 30\n",
+        "mes = resto // 30\n",
+        "print(\"Isso corresponde a: \",anos,\"ano(s)\",mes,\"mês(es)\",dia,\"dia(s)\")"
       ],
       "metadata": {
-        "id": "tEdnm97p1v59"
+        "id": "tEdnm97p1v59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f55a08a8-0d3d-4f84-f47c-0ce3fb253d5a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a quantidade de dias: 1500\n",
+            "Isso corresponde a:  4 ano(s) 2 mês(es) 0 dia(s)\n"
+          ]
+        }
+      ]
     }
   ]
 }
